non-msrv-tests/tests/ui/skip.stderr
error: duplicate `skip` option
 --> tests/ui/skip.rs:4:50
  |
4 | struct DuplicateSkipSame<T>(#[derive_where(skip, skip)] PhantomData<T>);
  |                                                  ^^^^

error: duplicate `skip` option
 --> tests/ui/skip.rs:9:17
  |
9 |     #[derive_where(skip)]
  |                    ^^^^

error: empty attribute option found
  --> tests/ui/skip.rs:14:36
   |
14 | struct EmptySkip<T>(#[derive_where(skip())] PhantomData<T>);
   |                                    ^^^^^^

error: unexpected constraint on `skip` when unconstrained `skip` already used
  --> tests/ui/skip.rs:19:17
   |
19 |     #[derive_where(skip(Debug))]
   |                    ^^^^^^^^^^^

error: duplicate `skip` option
  --> tests/ui/skip.rs:26:17
   |
26 |     #[derive_where(skip)]
   |                    ^^^^

error: no trait that can be skipped is being implemented
  --> tests/ui/skip.rs:31:43
   |
31 | struct NoSupportedTrait<T>(#[derive_where(skip)] PhantomData<T>);
   |                                           ^^^^

error: unsupported `Clone` constraint on `skip`
  --> tests/ui/skip.rs:34:48
   |
34 | struct UnsupportedTrait<T>(#[derive_where(skip(Clone))] PhantomData<T>);
   |                                                ^^^^^

error: duplicate `Debug` constraint on `skip`
  --> tests/ui/skip.rs:37:57
   |
37 | struct DuplicateTraitSame<T>(#[derive_where(skip(Debug, Debug))] PhantomData<T>);
   |                                                         ^^^^^

error: duplicate `Debug` constraint on `skip`
  --> tests/ui/skip.rs:42:22
   |
42 |     #[derive_where(skip(Debug))]
   |                         ^^^^^

error: trait to be skipped isn't being implemented
  --> tests/ui/skip.rs:47:50
   |
47 | struct MissingDeriveTrait<T>(#[derive_where(skip(Debug))] PhantomData<T>);
   |                                                  ^^^^^
